fix lint and change name to lowercase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Json-data-mapper",
+  "name": "json-data-mapper",
   "version": "1.0.0",
   "description": "Json Mapper Utility to transform Json to required format based on the schema given.",
   "main": "lib/index.js",
