--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",    
   },
   "keywords": [
     "json-mapper",
@@ -39,6 +39,7 @@
   "bugs": {
     "url": "https://github.com/gkrthk/Json-data-mapper/issues"
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "homepage":"https://devxcorner.in/post/json-data-mapper-npm/",  
   "license": "MIT",
   "devDependencies": {    
